# last-watched

./: Cargo.toml  reload.bat  rustc-ice-2024-12-10T05_30_50-8328.txt  unregister.bat
cli/: Cargo.toml
shell_extention/: Cargo.toml  build.rs
shell_extention/proto/: server.proto
shell_extention/src/: lib.rs
shell_extention/src/providers/: context_menu.rs  icon_overlay.rs  mod.rs
