[package]
name = "shell_extention"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "last_watched"

[dependencies]
anyhow.workspace = true
windows.workspace = true
windows-core.workspace = true
winreg.workspace = true
widestring = "1.0.2"
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1", features = ["full"] }

common = { path = "../common" }

[build-dependencies]
tonic-build = "0.10"